* actorOf robustification * Remote connections robustification * Test tweaks and new connection manager test